rustdocs/errors/rust-bitcoin-fuzz-fuzz_targets-bitcoin-deserialize_transaction.rs.txt
error[E0432]: unresolved import `honggfuzz`
 --> ../rust-bitcoin/fuzz/fuzz_targets/bitcoin/deserialize_transaction.rs:1:5
  |
1 | use honggfuzz::fuzz;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `honggfuzz`
  |
help: you might be missing a crate named `honggfuzz`, add it to your project and import it in your code
  |
1 + extern crate honggfuzz;
  |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
